Calculate the correct height of the preview iframe
This will prevent double scrollbars

--- a/core/Piranha.Manager/assets/css/style.css
+++ b/core/Piranha.Manager/assets/css/style.css
@@ -14045,7 +14045,7 @@ body.live-preview {
 .preview-body iframe {
   width: 100%;
   max-width: 100%;
-  height: 100%;
+  height: calc(100% - 64px);
   border: none 0;
   margin: 0 auto;
   display: block;
