--- a/core/Piranha.Manager/assets/less/preview.less
+++ b/core/Piranha.Manager/assets/less/preview.less
@@ -60,7 +60,7 @@ body.live-preview {
     iframe {
         width: 100%;
         max-width: 100%;
-        height: 100%;
+        height: ~"calc(100% - 64px)";
         border: none 0;
         margin: 0 auto;
         display: block;
